--- a/cloud/openshift/mytodo-route.yaml
+++ b/cloud/openshift/mytodo-route.yaml
@@ -34,9 +34,9 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 3
           failureThreshold: 2        
-        envFrom:
-        - secretRef:
-            name: database-credentials
+        # envFrom:
+        # - secretRef:
+        #     name: database-credentials
 
 ---
 apiVersion: v1
