--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": ">=15.3.0"
+    "node": ">=22.11.0"
   },
   "dependencies": {
-    "@cloudant/cloudant": "^4.5.1",
-    "async": "^3.2.5",
-    "body-parser": "~1.20.2",
-    "cfenv": "^1.2.4",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "@ibm-cloud/cloudant": "^0.12.1",
+    "async": "^3.2.6",
+    "body-parser": "~1.20.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "method-override": "~3.0.0",
-    "mongodb": "^6.6.0",
-    "nano": "^10.1.3",
+    "mongodb": "^6.13.0",
+    "nano": "^10.1.4",
     "serve-favicon": "^2.5.0"
   }
 }
